@@ -19,5 +19,8 @@
 # Website:
 #   http://apps.jcns.fz-juelich.de/libcerf
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = cerf.pc
+
 SUBDIRS = lib man test
 ACLOCAL_AMFLAGS = -I m4
