@@ -1,7 +1,10 @@
 == Revision history of libcerf, maintained by Joachim Wuttke ==
 
+libcerf-1.3, released 17jul13:
+  - Now supporting pkg-config (suggested by Mocja Miclavec).
+
 libcerf-1.2, released 16jul13:
-  - test programs no longer install to $bindir (reported by M. Miclavec).
+  - Test programs no longer install to $bindir (reported by Mocja Miclavec).
 
 libcerf-1.1, released 12may13:
   - Added Fortran binding by Antonio Cervellino.
